# Aplikacja-do-polecania-muzyki

./: .env.example  .gitignore  AI.py  Dockerfile  README.md  api.py  api_spotify.py  api_youtube.py  conn.py  gatunki.txt  genres.txt  main.py  mainn.py  neural_network.h5  new_data.py  new_parameters.py  old_data.py  pobranie_piosenki.py  podobienstwo_piosenek.h5  polecenie_muzyki.py  pyproject.toml  requirements.txt  results.json  results2.json  song_analize.py  tests.py  wynik.json  zwrócenie_piosenki.py
app/: main.py
app/connection/: conn.py
app/data/genres/: genres.txt
app/data/results/: new_results.json  old_results.json
app/neural_network/: neural_network.h5
app/recomendation/: neural.py  new_parameters.py  song_analize.py
app/static/css/: genres.css  main.css  result.css
app/static/scripts/: buttons.js  lights.js
app/templates/: genres.html  main.html  result.html
static/css/: genres.css  main.css  result.css
static/images/: background6.xcf
static/scripts/: script.js
templates/: genres.html  main.html  result.html
tests/: test_app.py
